--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,14 +6,10 @@ header {
     color: white;
     background-color: #CE2829;
 }
-header h1{
-    font-size: 40px;
-}
-header p {
-    margin-bottom: 0;
+body {
     padding: 0;
-    font-size: 10px;
+    margin: 0;
 }
-header p span {
-    font-weight: bold;
+header nav{
+    display: flex;
 }
