--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -27,6 +27,7 @@
 }
 .home button {
     background-color: #FDC913;
+    border-radius: 30px;
 }
 .container1 {
     width: 1050px;
@@ -105,6 +106,13 @@
     font-weight: bold;
     color: #CE2829;
 }
+.home .elyazi {
+    font-family: 'Satisfy', cursive;
+    font-size: 24px;
+    font-weight: bold;
+    color: #FDC913;
+    margin-bottom: 0;
+}
 .navbar2 a{
     margin-left: 40px;
     background-color: white;
@@ -115,4 +123,41 @@
 }
 .genel {
     background-color: #FAF7F2;
+}
+
+@media (max-width: 768px) {
+    .container1 {
+        max-width: 768px;
+        flex-wrap: wrap;
+    }
+    .kartlar {
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+    }
+    .right-cards {
+        gap: 2rem;
+    }
+    .kart-1 {
+        margin: auto;
+    }
+    .container1 .nav-link {
+        flex:40%;
+        padding: 0.5rem 10rem;
+        margin: 0;
+        font-size: 1.5rem;
+        width: 1rem;
+    }
+    .navbar-nav {
+        gap: 1rem;
+        justify-content: center;
+    }
+    .tata {
+        margin-bottom: 4rem;
+    }
+    .g-4 {
+        flex-direction: column;
+        align-items: center;
+    }
+    
 }
