--- a/src/components/SiparisOnay.css
+++ b/src/components/SiparisOnay.css
@@ -6,22 +6,49 @@
     align-items: center;
     justify-content: flex-start;
     gap: 10px;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
     margin-top: 30px;
     background-color: #CE2829;
     margin: 0;
-    padding: 0;
+    padding-top: 30px;
 }
-.sipOnay img {
-    margin-top: 30px;
-}
+
 .sipOnay div {
     text-align: center;
-    margin-top: 150px;
+
 }
 .sipOnay h3 {
     font-size: 40px;
     font-weight: 300;
     margin: 5px;
+}
+.siparisDetay2 {
+    max-width: 400px;
+    height: 200px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  margin-top: 20px;
+}
+.bilgi {
+    padding-top: 0;
+}
+.bilgi h2 {
+    font-size: 24px;
+    font-weight: 400;
+}
+ul {
+    width: 170px;
+    padding-left: 0rem!important;
+    margin: 20px auto 0!important;
+}
+ul li {
+    list-style: none;
+    text-align: left;
+    font-weight: 300;
+}
+@media (max-width: 768px) {
+    .sipOnay {
+        height: 100vh;
+    }
 }
